--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -116,6 +116,12 @@ a img:hover {
 .l-header__info {
   padding: 6px 0 18px;
 }
+.l-header__help {
+  position: absolute;
+  bottom: -50px;
+  right: 20px;
+  z-index: 1;
+}
 
 .l-content {
   position: relative;
@@ -207,6 +213,51 @@ a img:hover {
   width: 26px;
   height: 26px;
   background: #ccc;
+}
+
+.help {
+  position: relative;
+}
+.help__button {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, .1);
+  color: $mainColor;
+  font-size: 22px;
+  font-family: 'Noto Sans', sans-serif;
+  text-align: center;
+  cursor: pointer;
+}
+.help__list {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  width: 250px;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, .1);
+  font-size: 12px;
+}
+.help__list:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -7px;
+  right: 8px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 7px 7px 7px;
+  border-color: transparent transparent #ffffff transparent;
+}
+.help__list > li {
+  padding: 10px;
+}
+.help__list > li + li {
+  border-top: 2px solid #F0F0F0;
 }
 
 /* footer module */
