--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -448,10 +448,9 @@ a img:hover {
   font-family: 'Noto Sans', 'NotoSansJP-Bold', sans-serif;
 }
 .recentNews__text {
+  max-width: 30em;
   margin-left: 1em;
-}
-.recentNews__text a {
-  width: 30em;
+  text-align: left;
   vertical-align: text-bottom;
   @include ellipsis(30em);
 }
@@ -484,12 +483,14 @@ a img:hover {
 }
 .thumbList__thumb {
   float: left;
-  overflow: hidden;
   margin-right: 20px;
 }
 .thumbList__thumb > a {
   display: inline-block;
   border: 8px solid #cce2dc;
+}
+.thumbList__content {
+  overflow: hidden;
 }
 .thumbList__title {
   margin-bottom: 10px;
