--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -204,15 +204,9 @@ a img:hover {
 .nav a:hover {
   background: #e7f5f1;
 }
-.nav__ico {
-  display: block;
-}
-.nav__ico:after {
-  content: "";
+
+.icon {
   display: inline-block;
-  width: 26px;
-  height: 26px;
-  background: #ccc;
 }
 
 .help {
