SCSSファイルのSyntaxエラー直した

--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -7,22 +7,22 @@
 @font-face {
   font-family: 'NotoSansJP-Light';
   src: url('/fonts/NotoSansJP-Light.eot') format('eot'),
-       url('/fonts/NotoSansJP-Light.woff') format('woff'),
+       url('/fonts/NotoSansJP-Light.woff') format('woff');
 }
 @font-face {
   font-family: 'NotoSansJP-Regular';
   src: url('/fonts/NotoSansJP-Regular.eot') format('eot'),
-       url('/fonts/NotoSansJP-Regular.woff') format('woff'),
+       url('/fonts/NotoSansJP-Regular.woff') format('woff');
 }
 @font-face {
   font-family: 'NotoSansJP-Medium';
   src: url('/fonts/NotoSansJP-Medium.eot') format('eot'),
-       url('/fonts/NotoSansJP-Medium.woff') format('woff'),
+       url('/fonts/NotoSansJP-Medium.woff') format('woff');
 }
 @font-face {
   font-family: 'NotoSansJP-Bold';
   src: url('/fonts/NotoSansJP-Bold.eot') format('eot'),
-       url('/fonts/NotoSansJP-Bold.woff') format('woff'),
+       url('/fonts/NotoSansJP-Bold.woff') format('woff');
 }
 
 $basefontSize: 16px;
