残ってたアイコン全部入れた

--- a/_html/css/main.css
+++ b/_html/css/main.css
@@ -694,11 +694,21 @@ a img:hover {
     display: table;
     clear: both; }
 
-.nav > li {
+.nav__item {
   float: left;
   position: relative;
   width: 96px;
   text-align: center; }
+
+.nav__item--entry:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 7px;
+  left: 0;
+  width: 2px;
+  height: 53px;
+  background: #f0f0f0; }
 
 .nav a {
   display: block;
@@ -710,6 +720,9 @@ a img:hover {
 
 .nav a:hover {
   background: #e7f5f1; }
+
+.nav__textIcon {
+  margin-left: 5px; }
 
 .icon {
   display: inline-block; }
@@ -754,9 +767,20 @@ a img:hover {
 
 .help__list > li {
   padding: 10px; }
+  .help__list > li:after {
+    content: "";
+    display: table;
+    clear: both; }
 
 .help__list > li + li {
   border-top: 2px solid #F0F0F0; }
+
+.help__icon {
+  float: left;
+  margin-right: 10px; }
+
+.help__text {
+  overflow: hidden; }
 
 /* footer module */
 .copyright {
