背景を緑にする

--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -154,7 +154,7 @@ a img:hover {
   // z-index: -1;
   width: 100%;
   height: 100%;
-  background: #666;
+  background: #22c69e;
 }
 
 /* ==========================================================================
