--- a/_html/css/main.css
+++ b/_html/css/main.css
@@ -661,7 +661,7 @@ a img:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #666; }
+  background: #22c69e; }
 
 /* ==========================================================================
    Modules
