--- a/_html/scss/main.scss
+++ b/_html/scss/main.scss
@@ -593,3 +593,16 @@ a img:hover {
   overflow: auto;
   height: 378px;
 }
+
+.shareButton {
+  text-align: center;
+}
+.shareButton__item {
+  display: inline-block;
+  margin: 0 5px;
+  vertical-align: top;
+}
+
+.followButton__text {
+  margin-bottom: 10px;
+}
