ディレクトリが2014以下になるように修正

--- a/src/includes/header.hbs
+++ b/src/includes/header.hbs
@@ -1,7 +1,7 @@
 <header class="l-header" role="banner">
   <div class="l-header__inner">
     <div class="l-header__logo">
-      <h1 class="logo"><img src="/img/logo.svg" width="210" height="90" alt="東京Node学園祭2014"></h1>
+      <h1 class="logo"><img src="/2014/img/logo.svg" width="210" height="90" alt="東京Node学園祭2014"></h1>
     </div>
     <div class="l-header__utility">
       <div class="l-header__info">
