--- a/src/includes/scripts.hbs
+++ b/src/includes/scripts.hbs
@@ -1,5 +1,5 @@
-<script src="/js/lib.min.js"></script>
-<script src="/js/app.min.js"></script>
+<script src="/2014/js/lib.min.js"></script>
+<script src="/2014/js/app.min.js"></script>
 
 <script>
 
