--- a/src/includes/head.hbs
+++ b/src/includes/head.hbs
@@ -10,6 +10,6 @@
 <meta property="og:url" content="http://nodefest.jp/2014/">
 <meta property="og:image" content="http://nodefest.jp/2014/assets/img/logo.png">
 <meta property="og:description" content="このたびNode.js日本ユーザグループは、Socket.IOの作者でAutomatticのCTOであるGuillermo Rauch氏、browserifyの作者であるJames Halliday氏、NodeSchoolの作成者の一人であるMaxwell Ogden氏を招聘し、4回目の「東京Node学園祭」を開催します。">
-<link rel="stylesheet" href="/css/style.min.css">
+<link rel="stylesheet" href="/2014/css/style.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 </head>
