buildのディレクトリの整理

--- a/src/includes/header.hbs
+++ b/src/includes/header.hbs
@@ -19,9 +19,9 @@
       <nav class="l-header__nav" role="navigation">
         <ul class="nav">
           <li class="nav__item"><a href="/2014/index.html"><i class="icon icon-home"></i><div>Home</div></a></li>
-          <li class="nav__item"><a href="/2014/session.html"><i class="icon icon-session"></i><div>Sessions</div></a></li>
-          <li class="nav__item"><a href="/2014/speaker.html"><i class="icon icon-speaker"></i><div>Speakers</div></a></li>
-          <li class="nav__item"><a href="/2014/sponsor.html"><i class="icon icon-sponsor"></i><div>Sponsors</div></a></li>
+          <li class="nav__item"><a href="/2014/session.html"><i class="icon icon-session"></i><div>Session</div></a></li>
+          <li class="nav__item"><a href="/2014/speaker.html"><i class="icon icon-speaker"></i><div>Speaker</div></a></li>
+          <li class="nav__item"><a href="/2014/sponsor.html"><i class="icon icon-sponsor"></i><div>Sponsor</div></a></li>
           <li class="nav__item"><a href="/2014/access.html"><i class="icon icon-access"></i><div>Access</div></a></li>
           <li class="nav__item nav__item--entry"><a href="{}"><i class="icon icon-entry"></i><div>Entry<i class="nav__textIcon icon icon-external"></i></div></a></li>
         </ul>
