--- a/src/tmpls/index.hbs
+++ b/src/tmpls/index.hbs
@@ -1,10 +1,12 @@
 ---
 nav: home
+pageTitle: 
+pageDescription: このたびNode.js日本ユーザグループは、Socket.IOの作者でAutomatticのCTOであるGuillermo Rauch氏、browserifyの作者であるJames Halliday氏、NodeSchoolの作成者の一人であるMaxwell Ogden氏を招聘し、4回目の「東京Node学園祭」を開催します。
 ---
 
   <section class="section" id="about">
     <header class="section__header">
-      <h2 class="section__title">About<span class="section__subTitle"> - 東京Node学園祭について</span></h2>
+      <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>About<span class="section__titleDescription"> - 東京Node学園祭について</span></h2>
     </header>
     <div class="section__content">
       <div class="texts">
@@ -15,7 +17,7 @@ nav: home
   </section>
   <section class="section" id="schedule">
     <header class="section__header">
-      <h2 class="section__title">Schedule<span class="section__subTitle"> - 開催概要</span></h2>
+      <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>Schedule<span class="section__titleDescription"> - 開催概要</span></h2>
     </header>
     <div class="section__content">
       <table class="table table--row">
@@ -57,7 +59,7 @@ nav: home
   </section>
   <section class="section" id="guests">
     <header class="section__header">
-      <h2 class="section__title">Special guests<span class="section__subTitle"> - 海外スピーカー</span></h2>
+      <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>Special guests<span class="section__titleDescription"> - 海外スピーカー</span></h2>
     </header>
     <div class="section__content">
       <div class="thumbList">
@@ -94,7 +96,7 @@ nav: home
   </section>
   <section class="section" id="news">
     <header class="section__header">
-      <h2 class="section__title">News<span class="section__subTitle"> - お知らせ</span></h2>
+      <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>News<span class="section__titleDescription"> - お知らせ</span></h2>
     </header>
     <div class="section__content">
       <ol class="dateList">
@@ -105,42 +107,9 @@ nav: home
       </ol>
     </div>
   </section>
-  <section class="section section--sponsors" id="sponsors">
-    <header class="section__header">
-      <h2 class="section__title">Sponsores<span class="section__subTitle"> - スポンサー</span></h2>
-    </header>
-    <div class="section__content">
-      <ul class="bannerList">
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-      </ul>
-    </div>
-  </section>
   <section class="section" id="attention">
     <header class="section__header">
-      <h2 class="section__title">Attention<span class="section__subTitle"> - 取材をご希望の方へ</span></h2>
+      <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>Attention<span class="section__titleDescription"> - 取材をご希望の方へ</span></h2>
     </header>
     <div class="section__content">
       <div class="texts">
