セッションの内容を修正

--- a/src/tmpls/session.hbs
+++ b/src/tmpls/session.hbs
@@ -44,7 +44,9 @@ pageDescription:
             <div class="table__session">調整中</div>
             <div class="table__speaker"><a href="https://twitter.com/ahomu">@ahomu</a></div>
           </td>
-          <td></td>
+          <td>
+            <div class="table__session">調整中</div>
+          </td>
         </tr>
         <tr>
           <td class="table__td--time">14:30 〜 15:00</td>
@@ -52,7 +54,9 @@ pageDescription:
             <div class="table__session">調整中</div>
             <div class="table__speaker"><a href="https://twitter.com/substack">@substack</a></div>
           </td>
-          <td></td>
+          <td>
+            <div class="table__session">調整中</div>
+          </td>
         </tr>
         <tr>
           <td class="table__td--time">15:30 〜 16:00</td>
@@ -60,7 +64,9 @@ pageDescription:
             <div class="table__session">Dart VM</div>
             <div class="table__speaker"><a href="https://twitter.com/technohippy">@technohippy</a></div>
           </td>
-          <td></td>
+          <td>
+            <div class="table__session">調整中</div>
+          </td>
         </tr>
         <tr>
           <td class="table__td--time">16:15 〜 16:45</td>
@@ -68,7 +74,9 @@ pageDescription:
             <div class="table__session">大規模Node.js運用</div>
             <div class="table__speaker"><a href="https://twitter.com/toritori0308">@toritori0308</a></div>
           </td>
-          <td></td>
+          <td>
+            <div class="table__session">調整中</div>
+          </td>
         </tr>
         <tr>
           <td class="table__td--time">17:00 〜 17:30</td>
@@ -82,14 +90,14 @@ pageDescription:
           <td>
             <div class="table__session">閉会 + 撤収</div>
           </td>
-          <td></td>
+          <td>-</td>
         </tr>
         <tr>
           <td class="table__td--time">18:30 〜 </td>
           <td>
             <div class="table__session">後夜祭</div>
           </td>
-          <td></td>
+          <td>-</td>
         </tr>
       </table>
       <ul class="list list--notice">
