--- a/src/tmpls/session.hbs
+++ b/src/tmpls/session.hbs
@@ -1,6 +1,6 @@
 ---
 nav: session
-pageTitle: 'セッション - '
+pageTitle: 'Session - '
 pageDescription: 
 ---
 
@@ -110,3 +110,5 @@ pageDescription:
       </section>
     </div>
   </section>
+
+  {{> sponsor }}
