GoogleMapをWebComponentsを使って実装

--- a/src/includes/head.hbs
+++ b/src/includes/head.hbs
@@ -12,4 +12,6 @@
 <meta property="og:description" content="{{pageDescription}}">
 <link rel="stylesheet" href="/2014/css/style.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
+<script src="/2014/webcomponents/platform/platform.js"></script>
+<link rel="import" href="/2014/webcomponents/google-map/google-map.html">
 </head>
