--- a/src/tmpls/access.hbs
+++ b/src/tmpls/access.hbs
@@ -9,10 +9,9 @@ pageDescription:
       <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>Access<span class="section__titleDescription"> - 会場へのアクセス</span></h2>
     </header>
     <div class="section__content">
-      <div class="image--outline">
+      <div class="image--outline map">
         <google-map latitude="35.657997" longitude="139.698080"
-          zoom="17" fitToMarkers
-          style='display: block;width: 100%;height: 380px;'>
+          zoom="17" fitToMarkers>
           <google-map-marker latitude="35.657997" longitude="139.698080"
           draggable="false" title="株式会社サイバーエージェント"></google-map-marker>
         </google-map>
