リンクの設定

--- a/src/tmpls/access.hbs
+++ b/src/tmpls/access.hbs
@@ -16,7 +16,9 @@ pageDescription:
           draggable="false" title="株式会社サイバーエージェント"></google-map-marker>
         </google-map>
       </div>
-      <p><a href="">大きな地図で見る</a></p>
+      <div class="text">
+        <p><a href="https://goo.gl/maps/mWBPj">大きな地図で見る</a></p>
+      </div>
       <dl class="dfnList">
         <dt>株式会社 サイバーエージェントセミナールーム</dt>
         <dd>〒150-0043 東京都渋谷区道玄坂1丁目12番1号 渋谷マークシティ ウエスト17階</dd>
