--- a/src/includes/header.hbs
+++ b/src/includes/header.hbs
@@ -1,7 +1,7 @@
 <header class="l-header" role="banner">
   <div class="l-header__inner">
     <div class="l-header__logo">
-      <h1 class="logo"><img src="/2014/img/logo.svg" width="210" height="90" alt="東京Node学園祭2014"></h1>
+    <h1 class="logo"><a href="/2014/"><img src="/2014/img/logo.svg" width="210" height="90" alt="東京Node学園祭2014"></a></h1>
     </div>
     <div class="l-header__utility">
       <div class="l-header__info">
@@ -18,7 +18,7 @@
       </div>
       <nav class="l-header__nav" role="navigation">
         <ul class="nav">
-          <li class="nav__item"><a href="/2014/index.html"><i class="icon icon-home"></i><div>Home</div></a></li>
+          <li class="nav__item"><a href="/2014/"><i class="icon icon-home"></i><div>Home</div></a></li>
           <li class="nav__item"><a href="/2014/session.html"><i class="icon icon-session"></i><div>Session</div></a></li>
           <li class="nav__item"><a href="/2014/speaker.html"><i class="icon icon-speaker"></i><div>Speaker</div></a></li>
           <li class="nav__item"><a href="/2014/sponsor.html"><i class="icon icon-sponsor"></i><div>Sponsor</div></a></li>
