スポンサーはまだ非表示にしておく

--- a/src/includes/sponsor.hbs
+++ b/src/includes/sponsor.hbs
@@ -1,4 +1,4 @@
-  <section class="section section--sponsors" id="sponsors">
+{{!--   <section class="section section--sponsors" id="sponsors">
     <header class="section__header">
       <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>Sponsores<span class="section__titleDescription"> - スポンサー</span></h2>
     </header>
@@ -30,4 +30,4 @@
         </li>
       </ul>
     </div>
-  </section>
+  </section> --}}
