未確定が多いページはComing Soonにする

--- a/src/layouts/index.hbs
+++ b/src/layouts/index.hbs
@@ -25,7 +25,7 @@
         <p class="intro__place">会場：株式会社サイバーエージェント セミナールーム</p>
       </div>
       <div class="intro__buttons">
-        <a class="intro__button" href="{}">イベントに参加する</a>
+        <a class="intro__button intro__button--disabled">イベントに参加する</a>
       </div>
       <div class="intro__recentNews">
         <p class="recentNews">
