--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -231,6 +231,7 @@ a img:hover {
 }
 .nav a {
   display: block;
+  position: relative;
   height: 59px;
   padding-top: 8px;
   color: $basefontColor;
@@ -240,6 +241,22 @@ a img:hover {
 .nav a:hover {
   background: #e7f5f1;
 }
+.nav__item--disabled a {
+  color: #ccc;
+  cursor: default;
+}
+.nav__item--disabled a:hover:after {
+  content: "Coming Soon";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 67px - 10px;
+  padding-top: 10px;
+  background: #9edfdc;
+  color: #fff;
+}
+
 .nav__textIcon {
   margin-left: 5px;
 }
@@ -452,6 +469,24 @@ a img:hover {
 }
 .intro__button:hover {
   background: rgba(255, 255, 255, .2);
+}
+.intro__button--disabled {
+  color: #ccc;
+  cursor: default;
+}
+.intro__button--disabled:hover:after {
+  content: "Coming Soon";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  line-height: 55px;
+  background: #9edfdc;
+  border-radius: 4px;
+  color: #fff;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: bold;
 }
 .intro__detail {
   @include top;
