--- a/src/includes/header.hbs
+++ b/src/includes/header.hbs
@@ -20,7 +20,7 @@
         <ul class="nav">
           <li class="nav__item"><a href="/2014/"><i class="icon icon-home"></i><div>Home</div></a></li>
           <li class="nav__item nav__item--disabled"><a><i class="icon icon-session"></i><div>Session</div></a></li>
-          <li class="nav__item"><a href="/2014/speaker.html"><i class="icon icon-speaker"></i><div>Speaker</div></a></li>
+          <li class="nav__item nav__item--disabled"><a href="/2014/speaker.html"><i class="icon icon-speaker"></i><div>Speaker</div></a></li>
           <li class="nav__item nav__item--disabled"><a><i class="icon icon-sponsor"></i><div>Sponsor</div></a></li>
           <li class="nav__item"><a href="/2014/access.html"><i class="icon icon-access"></i><div>Access</div></a></li>
           <li class="nav__item nav__item--disabled nav__item--entry"><a><i class="icon icon-entry"></i><div>Entry<i class="nav__textIcon icon icon-external"></i></div></a></li>
