--- a/src/includes/scripts.hbs
+++ b/src/includes/scripts.hbs
@@ -45,7 +45,7 @@ $( window ).on( 'resize', function ( e ) {
 // socket 利用時の例
 ////////////////////////
 
-var socket = io( 'http://localhost:8080' );
+var socket = io( '210.152.156.195' );
 
 // 閲覧者が花火を打ち上げると 'userinput:fire' イベントが発火します
 // これをソケットサーバに送ってください。
