花火周り調整

--- a/src/includes/fireworks.hbs
+++ b/src/includes/fireworks.hbs
@@ -3,7 +3,7 @@
     <div class="view3d__inner">
       <div class="view3d__cursor">
         <div class="view3d__textField">
-          <input>
+          <input maxlength="10">
         </div>
       </div>
     </div>
