--- a/src/includes/scripts.hbs
+++ b/src/includes/scripts.hbs
@@ -3,7 +3,7 @@
 
 <script>
 
-var headerHeight = 0;//$( '.l-header' ).height();
+var headerHeight = $( '.l-header' ).height();
 var width = window.innerWidth;
 var height = window.innerHeight - headerHeight;
 var viewport = new NF14.view3d.Viewport( document.getElementById( 'fireworks' ) );
