ヘルプの内容を新しい仕様に合わせて修正

--- a/src/includes/header.hbs
+++ b/src/includes/header.hbs
@@ -34,7 +34,7 @@
       <ul class="help__list">
         <li>
           <i class="help__icon icon icon-fireworks"></i>
-          <p class="help__text">Enterで入力フォームが出現し、テキスト入力後のEnterで花火が打ち上がります。</p>
+          <p class="help__text">Enterでテキスト入力可能となり、次のEnterで花火が打ち上がります。</p>
         </li>
         <li>
           <i class="help__icon icon icon-drag"></i>
