--- a/src/tmpls/speaker.hbs
+++ b/src/tmpls/speaker.hbs
@@ -31,10 +31,10 @@ pageDescription:
         </div>
         <div class="thumbList__item">
           <div class="thumbList__thumb">
-            <a href="https://twitter.com/MaxwellOgden"><img src="http://dummyimage.com/144" class="image--outline" alt="" width="144" height="144"></a>
+            <a href="https://twitter.com/maxogden"><img src="http://dummyimage.com/144" class="image--outline" alt="" width="144" height="144"></a>
           </div>
           <div class="thumbList__content">
-            <h3 class="thumbList__title"><a href="https://twitter.com/MaxwellOgden">Maxwell Ogden</a></h3>
+            <h3 class="thumbList__title"><a href="https://twitter.com/maxogden">Maxwell Ogden</a></h3>
             <p class="thumbList__text">NodeSchoolと呼ばれるオンラインNode.js学習サイトの作成者の一人であり、同じイベント名であるNodeSchoolの出張イベントも開催しています。Node.js開発者を増やす事に日々貢献しています。またOpenDataプロジェクトといったアクセス可能なデータを再利用可能かつmachine-readableにするというチャレンジングなプロジェクトにも関わってます。</p>
           </div>
         </div>
