--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -163,7 +163,7 @@ a img:hover {
   position: fixed;
   top: $headerHeight;
   left: 0;
-  // z-index: -1;
+  z-index: 0;
   width: 100%;
   height: 100%;
   background: #22c69e;
