--- a/2014/css/style.css
+++ b/2014/css/style.css
@@ -670,6 +670,7 @@ a img:hover {
   position: fixed;
   top: 112px;
   left: 0;
+  z-index: 0;
   width: 100%;
   height: 100%;
   background: #22c69e; }
