Update 2014 with 085bc65

--- a/2014/css/style.css
+++ b/2014/css/style.css
@@ -479,6 +479,7 @@ table {
   overflow: hidden; }
 
 .view3d__cursor {
+  pointer-events: none;
   position: absolute;
   top: -1000px;
   padding: 8px 0 0 8px;
