faviconのリンク切れ修正

--- a/src/includes/head.hbs
+++ b/src/includes/head.hbs
@@ -9,6 +9,7 @@
 <meta property="og:url" content="http://nodefest.jp/2014/">
 <meta property="og:image" content="http://nodefest.jp/2014/img/logo.png">
 <meta property="og:description" content="{{pageDescription}}">
+<link rel="shortcut icon" href="/2014/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="stylesheet" href="/2014/css/style.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 <script src="/2014/webcomponents/platform/platform.js"></script>
