--- a/src/includes/sponsor.hbs
+++ b/src/includes/sponsor.hbs
@@ -1,33 +1,30 @@
-{{!--   <section class="section section--sponsors" id="sponsors">
+  <section class="section section--sponsors" id="sponsors">
     <header class="section__header">
       <h2 class="section__title"><i class="section__titleIcon icon icon-title"></i>Sponsores<span class="section__titleDescription"> - スポンサー</span></h2>
     </header>
     <div class="section__content">
       <ul class="bannerList">
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="http://info.dwango.co.jp/"><img src="/2014/img/sponsor/dwango.png" alt="" width="160" height="100"></a>
         </li>
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="http://www.microsoft.com/ja-jp/default.aspx"><img src="/2014/img/sponsor/microsoft.png" alt="" width="160" height="100"></a>
         </li>
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="http://dena.com/"><img src="/2014/img/sponsor/dena.png" alt="" width="160" height="100"></a>
         </li>
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="http://otakumode.com/"><img src="/2014/img/sponsor/otakumode.png" alt="" width="160" height="100"></a>
         </li>
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="http://automattic.com/"><img src="/2014/img/sponsor/automattic.png" alt="" width="160" height="100"></a>
         </li>
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="https://www.digitalocean.com/"><img src="/2014/img/sponsor/digitalocean.png" alt="" width="160" height="100"></a>
         </li>
         <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
-        </li>
-        <li>
-          <a href="{}"><img src="http://dummyimage.com/160x100" alt="" width="160" height="100"></a>
+          <a href="http://www.pxgrid.com/"><img src="/2014/img/sponsor/pxgrid.png" alt="" width="160" height="100"></a>
         </li>
       </ul>
     </div>
-  </section> --}}
+  </section>
